Bug 492152 - kwin_wayland spams "kwin_scene_opengl: 0x1: GL_INVALID_VALUE in glScissor"
Summary: kwin_wayland spams "kwin_scene_opengl: 0x1: GL_INVALID_VALUE in glScissor"
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.1.90
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-08-25 03:37 UTC by fanzhuyifan
Modified: 2024-10-15 20:36 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description fanzhuyifan 2024-08-25 03:37:56 UTC
SUMMARY
After recent updates to kwin master, kwin_wayland spams "kwin_wayland[1812]: kwin_scene_opengl: 0x1: GL_INVALID_VALUE in glScissor" in the logs.

I didn't notice any visible graphical glitches.

STEPS TO REPRODUCE

OBSERVED RESULT


EXPECTED RESULT
The error causing this message should be fixed

SOFTWARE/OS VERSIONS

Operating System: Arch Linux 
KDE Plasma Version: 6.1.80
KDE Frameworks Version: 6.6.0
Qt Version: 6.8.0
Kernel Version: 6.10.5-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 20 × 13th Gen Intel® Core™ i9-13900H
Memory: 15.2 GiB of RAM
Graphics Processor: Mesa Intel® Graphics
Manufacturer: ASUSTeK COMPUTER INC.
Product Name: ROG Zephyrus G16 GU603VV_GU603VV
System Version: 1.0


ADDITIONAL INFORMATION
prime system with intel iGPU and nvidia dGPU
Comment 1 Vlad Zahorodnii 2024-08-28 13:07:18 UTC
Any clues what triggers it? As is, I'm afraid the bug report is not actionable.
Comment 2 Bug Janitor Service 2024-09-12 03:47:18 UTC
🐛🧹 ⚠️ This bug has been in NEEDSINFO status with no change for at least 15 days. Please provide the requested information, then set the bug status to REPORTED. If there is no change for at least 30 days, it will be automatically closed as RESOLVED WORKSFORME.

For more information about our bug triaging procedures, please read https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging.

Thank you for helping us make KDE software even better for everyone!
Comment 3 Bug Janitor Service 2024-09-27 03:47:41 UTC
🐛🧹 This bug has been in NEEDSINFO status with no change for at least 30 days. Closing as RESOLVED WORKSFORME.
Comment 4 kinta 2024-10-01 10:33:22 UTC
I find the same problem, not critical as everything is working as it should, but there are a lot of messages in journal with this content:

kwin_scene_opengl: 0x1: GL_INVALID_VALUE in glScissor

It happens whenever I place the mouse over the taskbar,  and specially when I trigger the windows presentation in left top corner.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.1.90
KDE Frameworks Version: 6.6.0
Qt Version: 6.8.0
Kernel Version: 6.10.10-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 8 × 11th Gen Intel® Core™ i5-1135G7 @ 2.40GHz
Memory: 15.4 GiB of RAM
Graphics Processor: Mesa Intel® Xe Graphics
Manufacturer: LENOVO
Product Name: 20W8000ESP
System Version: ThinkPad X13 Yoga Gen 2
Comment 5 Nate Graham 2024-10-01 15:52:36 UTC
*** Bug 493911 has been marked as a duplicate of this bug. ***
Comment 6 Zamundaaa 2024-10-02 15:54:48 UTC
This is almost certainly fallout from https://invent.kde.org/plasma/kwin/-/merge_requests/6273, the code doesn't clip damage to the framebuffer
Comment 7 postix 2024-10-08 21:05:30 UTC
For me it's `kwin_wayland[23058]: kwin_scene_opengl: 0x2: GL_INVALID_VALUE in glScissor` on

Operating System: openSUSE Tumbleweed 20241007
KDE Plasma Version: 6.2.0
KDE Frameworks Version: 6.6.0
Qt Version: 6.7.3
Kernel Version: 6.11.2-1-default (64-bit)
Graphics Platform: Wayland
Graphics Processor: AMD Radeon RX 580 Series
Comment 8 Fungus 2024-10-13 16:14:50 UTC
The same with my prime system with intel iGPU and nvidia dGPU.
This log was output as soon as user desktop is starting
Comment 9 Vlad Zahorodnii 2024-10-15 11:24:00 UTC
Git commit de12db7398068725c0ef1681455069f3ccd09526 by Vlad Zahorodnii, on behalf of Xaver Hugl.
Committed on 15/10/2024 at 11:11.
Pushed by vladz into branch 'master'.

backends/drm: restrict damage area to the screen's size

Scissor rectangles going outside of the framebuffer cause OpenGL warnings

M  +2    -2    src/backends/drm/drm_egl_layer_surface.cpp

https://invent.kde.org/plasma/kwin/-/commit/de12db7398068725c0ef1681455069f3ccd09526
Comment 10 Vlad Zahorodnii 2024-10-15 11:43:11 UTC
Git commit 446423407104461c9936c107616ccec7b2432867 by Vlad Zahorodnii.
Committed on 15/10/2024 at 11:29.
Pushed by vladz into branch 'Plasma/6.2'.

backends/drm: restrict damage area to the screen's size

Scissor rectangles going outside of the framebuffer cause OpenGL warnings


(cherry picked from commit de12db7398068725c0ef1681455069f3ccd09526)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>

M  +2    -2    src/backends/drm/drm_egl_layer_surface.cpp

https://invent.kde.org/plasma/kwin/-/commit/446423407104461c9936c107616ccec7b2432867