backends/drm: restrict damage area to the screen's size

Scissor rectangles going outside of the framebuffer cause OpenGL warnings

BUG: 492152


(cherry picked from commit de12db7398068725c0ef1681455069f3ccd09526)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>